--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-md-5 offset-md-1 my-5 p-4">
                 <h1 class="jumbotron-heading mb-3">Edookio AI <span class="color-1">Premium</span></h1>
-                <p class="lead">Využij sílu Edookio AI naplno s neomezenými otázkami a tisícovkou kreditů měsíčně</p>        
+                <p class="lead">Využij sílu Edookio AI naplno</p>        
             </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            neomezený přístup ke kartičkám
+                                            základní AI
                                         </div>
                                     </div>
                                 </li>
@@ -108,40 +108,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            neomezená tvorba obsahu bez AI
-                                        </div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            neomezené sdílení obsahu
-                                        </div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            generování AI modelem gpt-4o-mini
-                                        </div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            100 AI kreditů / měsíc
+                                            generování 500 kartiček / měsíc
                                         </div>
                                     </div>
                                 </li>
@@ -217,7 +184,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            neomezený přístup ke kartičkám
+                                            nejpokročilejší AI
                                         </div>
                                     </div>
                                 </li>
@@ -228,7 +195,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            neomezená tvorba obsahu bez AI
+                                            generování 1000 kartiček / měsíc
                                         </div>
                                     </div>
                                 </li>
@@ -239,40 +206,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            neomezené sdílení obsahu
-                                        </div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            generování AI modelem gpt-4o
-                                        </div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            1 000 AI kreditů / měsíc
-                                        </div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            150 stran / dokument
+                                            300 stran / dokument
                                         </div>
                                     </div>
                                 </li>
@@ -330,14 +264,13 @@
                             </div>
                             <p class="text-center mt-4 mb-2 co-ziskas-text"><b>Co získáš?</b></p>
                             <ul class="text-smaller premium-card-list">
-                                
                                 <li>
                                     <div class="d-flex align-items-center">
                                         <div>
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            neomezený přístup ke kartičkám
+                                            nejpokročilejší AI
                                         </div>
                                     </div>
                                 </li>
@@ -348,7 +281,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            neomezená tvorba obsahu bez AI
+                                            generování 1250 kartiček / měsíc
                                         </div>
                                     </div>
                                 </li>
@@ -359,40 +292,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            neomezené sdílení obsahu
-                                        </div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            generování AI modelem gpt-4o
-                                        </div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            1 250 AI kreditů / měsíc
-                                        </div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            150 stran / dokument
+                                            300 stran / dokument
                                         </div>
                                     </div>
                                 </li>
@@ -500,23 +400,17 @@
 
                       <!-- AI Credits -->
                       <tr>
-                        <th scope="row">Kredity na tvorbu AI obsahu</th>
-                        <td>100 / měsíc</td>
+                        <th scope="row">Generování kartiček a otázek</th>
+                        <td>500 / měsíc</td>
                         <td>1 000 / měsíc</td>
                         <td>1 250 / měsíc</td>
                       </tr>
 
                       <tr>
                         <th scope="row">AI model</th>
-                        <td>gpt-4o-mini</td>
-                        <td>gpt-4o</td>
-                        <td>gpt-4o</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Extra 300 AI kreditů do začátku</th>
-                        <td><i class="fas fa-check text-success"></i></td>
-                        <td><i class="fas fa-check text-success"></i></td>
-                        <td><i class="fas fa-check text-success"></i></td>
+                        <td>základní</td>
+                        <td>nejpokročilejší</td>
+                        <td>nejpokročilejší</td>
                       </tr>
                       <tr>
                         <th scope="row">Možnost dokoupení kreditů</th>
@@ -528,8 +422,8 @@
                       <tr>
                         <th scope="row">Generování z dokumentu</th>
                         <td>75 stran / dokument</td>
-                        <td>150 stran / dokument</td>
-                        <td>150 stran / dokument</td>
+                        <td>300 stran / dokument</td>
+                        <td>300 stran / dokument</td>
                       </tr> 
                     </tbody>
                   </table>   
