--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -239,10 +239,10 @@
                   <div class="d-flex justify-content-center">
                     <img src="/img/icon_bonus.png" class="img-fit" style="max-width: 100px;" alt="bonus-icon">
                   </div>
-                    <h3 class="text-center mt-3 mb-4">Získáváš bonus 100 AI kreditů</h3>
+                    <h3 class="text-center mt-3 mb-4">Získáváš bonus 1 000 AI kreditů</h3>
                   <div class="mt-4 text-center">
-                    <p>Pokud nyní splníš svůj <b>denní cíl</b> deset dnů v řadě, připíšeme ti <b>dalších 500 AI kreditů</b>.</p>
-                    <p>AI kredity můžeš využít k tvorbě kartiček pomocí AI.</p>
+                    <p>Kredity můžeš využít k vygenerování 1 000 kartiček pomocí AI.</p>
+                    <p>Pokud nyní splníš svůj <b>denní cíl</b> deset dnů v řadě, připíšeme ti <b>dalších 2 500 AI kreditů</b>.</p>
                   </div>
                   <div>
                     <div class="d-flex justify-content-center mt-4 mb-3">
