--- a/views/category.ejs
+++ b/views/category.ejs
@@ -690,7 +690,9 @@
           </div>
           <h5 class="mt-3 text-center mb-2">Generuji kartičky a otázky...</h5>
           <% if (currentUser && currentUser.isPremium) { %>
-          <p class="text-center text-smaller">používám <b>gpt-4o</b></p>
+          <p class="text-center text-smaller">
+            používám <b>nejpokročilejší AI model</b>
+          </p>
           <% } else { %>
           <p class="text-center text-smaller">
             používám <b>základní AI model</b> |
