--- a/views/home.ejs
+++ b/views/home.ejs
@@ -146,7 +146,7 @@
                     <li class="stats-item text-muted">
                       <span>Otázek tento měsíc</span
                       ><span class="text-bold"
-                        ><%= currentUser.questionsSeenThisMonth %></span
+                        ><%- currentUser.questionsSeenThisMonth + currentUser.qustionsSeenThisMonthTeacher %></span
                       >
                     </li>
                   </ul>
