--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -187,7 +187,7 @@
                   <h4 class="text-center mt-3 mb-4">Získej neomezený přístup k testovým otázkám</h4>
 
                   <div class="text-center mt-4">
-                    <p>Každý měsíc máš od nás 100 testových otázek <span class="color-1"><b>zdarma</b></span>. Můžeš si však aktivovat předplatné <span class="color-1"><b>Premium</b></span>, se kterým získáš přístup k více než 4 000 testových otázek <span class="color-1"><b>bez omezení</b></span>.</p>
+                    <p>Každý měsíc máš od nás procházení 100 testových otázek <span class="color-1"><b>zdarma</b></span>. Můžeš si však aktivovat předplatné <span class="color-1"><b>Premium</b></span>, se kterým můžeš studovat testové otázky <span class="color-1"><b>bez omezení</b></span>.</p>
                   </div>
                   <div>
                     <div class="d-flex justify-content-center mt-4 mb-3">
