--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -126,7 +126,7 @@
                                     <div class="col-8">
                                         <div class="ml-3">
                                             <h5 class="reason-title">Studuj kdykoliv a kdekoliv</h5>
-                                            <p class="reason-content mt-2">Díky mobilní aplikace můžeš studovat cestou do školy, při čekání na zkoušku nebo třeba doma v posteli.</p>
+                                            <p class="reason-content mt-2">Díky mobilní aplikaci můžeš studovat cestou do školy, při čekání na zkoušku nebo třeba doma v posteli.</p>
                                         </div>
                                     </div>
                                     
