--- a/views/category.ejs
+++ b/views/category.ejs
@@ -494,7 +494,7 @@
                   style="height: 72px"
                 />
               </div>
-              <p class="text-muted text-center mb-3">
+              <p class="text-muted text-center text-smaller mb-3">
                 1 kartička = 1 AI kredit
               </p>
               <a
