--- a/views/questions/finishedRandom.ejs
+++ b/views/questions/finishedRandom.ejs
@@ -53,7 +53,7 @@
           </div>
         </div>
         <% if (!currentUser.isPremium && currentUser.questionsSeenThisMonth >
-        100 && !section.createdByTeacher) { %>
+        100 && createdByTeacher) { %>
         <hr />
         <div class="row mt-3">
           <div class="col-12">
