--- a/views/home.ejs
+++ b/views/home.ejs
@@ -245,7 +245,7 @@
                       >
                         <h5 class="card-title d-flex justify-content-center"><%= cat.text %>
                           <% if (cat.createdByTeacher) { %>
-                            <span class="badge bg-danger rounded-circle p-1 verified-check mx-1" data-bs-toggle="tooltip" data-bs-placement="top" title="vytvořeno učitelem"><i class="fas fa-check" style="font-size: 0.5rem"></i></span>
+                            <span class="badge bg-danger rounded-circle p-1 verified-check mx-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Vytvořeno učitelem"><i class="fas fa-check" style="font-size: 0.5rem"></i></span>
                           <% } %>
                           </h5>
                         <div>
