--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -67,7 +67,7 @@
                     <button class="btn btn-lg btn-danger w-100 mt-3" type="submit" id="submit-registration">Pokračovat</button>
                     </div>
                     <div class="text-center mt-4 d-flex justify-content-center">
-                        <a href="/auth/user/teacher" class="text-small text-muted" style="cursor:pointer">Jsem učitel</a>
+                        <a href="/auth/user/ucitel" class="text-small text-muted" style="cursor:pointer">Jsem učitel</a>
                     </div>
                 </form>
             </div>
