js bot protection

--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -143,5 +143,10 @@
     </div>
     </div>
 </div>
-    
+<script>
+    window.addEventListener("DOMContentLoaded", () => {
+      const form = document.getElementById("myForm");
+      form.action = "/auth/user/new?js=1";
+    });
+    </script>
     <script src="/js/validateForms.js"></script>
