--- a/views/index.ejs
+++ b/views/index.ejs
@@ -466,6 +466,80 @@
         </div>
       </section>
 
+      <section class="testimonials" data-aos="fade-up">
+        <div class="container">
+          <!-- Testimonials row -->
+          <div class="row text-center">
+            <h1 class="mb-4">Zkušenosti našich studentů</h1>
+            <!-- 1st Testimonial -->
+            <div class="col-md-4 mb-4">
+              <img
+                src="/img/testimonial_1.png"
+                alt="Anna Deynah"
+                class="rounded-circle testimonial-avatar"
+              />
+              <h5 class="fw-bold">Michaela Batlová</h5>
+              <p class="testimonial-quote">
+                “Konečně nástroj, který mi zrychlí a usnadní učení! A někdy
+                dokonce i dodá motivaci začít, když se mi nechce. Nejvíce
+                oceňuji formu opakování pomocí testů. Díky!”
+              </p>
+              <div class="star-rating">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+              </div>
+            </div>
+
+            <!-- 2nd Testimonial -->
+            <div class="col-md-4 mb-4">
+              <img
+                src="/img/testimonial_2.png"
+                alt="John Doe"
+                class="rounded-circle testimonial-avatar"
+              />
+              <h5 class="fw-bold">Karolína Hebková</h5>
+              <p class="testimonial-quote">
+                Edookio je skvělá kombinace dvou zásadních studijních pomůcek -
+                testových otázek a opakovacích kartiček. Díky mobilní aplikaci
+                můžu studovat kdykoli a kdekoli, třeba cestou do školy.”
+              </p>
+              <div class="star-rating">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+              </div>
+            </div>
+
+            <!-- 3rd Testimonial -->
+            <div class="col-md-4 mb-4">
+              <img
+                src="/img/testimonial_3.png"
+                alt="Maria Kate"
+                class="rounded-circle testimonial-avatar"
+              />
+              <h5 class="fw-bold">Petra Hroudná</h5>
+              <p class="testimonial-quote">
+                “Tato aplikace je přesně to, co jsem hledala! Opakovací kartičky
+                a testy vytvořené pomocí AI jsou kvalitní a v nevyžadují v
+                podstatě žádné opravování. Super!”
+              </p>
+              <div class="star-rating">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section class="proc-edookio" style="background-color: #fffbf8">
         <div class="container">
           <div class="row">
